tests/duarouter/alternatives/style1_input/errors/xml/missing_element_end/errors.duarouter
Error: The route of the vehicle '1' is not known.
Error: expected end of tag 'routeDistribution'
 In file 'input_alts.rou.alt.xml'
 At line/column 13/3.

Quitting (on error).
